# SakaDesk

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  TODO.md  desktop.py  dev.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release-please-config.json
.github/workflows/: build.yml  release-please.yml
backend/: main.py  version.py
backend/api/: auth.py  blogs.py  chat_features.py  content.py  diagnostics.py  favorites.py  notifications.py  profile.py  progress.py  read_states.py  report.py  search.py  settings.py  sync.py  transcription.py  translation.py  version.py
backend/data/: search_aliases.json
backend/fixtures/: __init__.py  test_data.py
backend/services/: adaptive_sync.py  auth_service.py  blog_service.py  credential_store.py  notification_service.py  path_resolver.py  platform.py  search_service.py  service_utils.py  settings_store.py  sync_service.py  transcription_service.py  translation_service.py  upgrade_service.py
backend/tests/: conftest.py  test_adaptive_sync.py  test_auth_api.py  test_auth_service.py  test_auth_service_extended.py  test_blog_backup_manager.py  test_blog_service.py  test_blog_service_core.py  test_blogs_api.py  test_blogs_api_extended.py  test_chat_features_api.py  test_content_api.py  test_content_api_extended.py  test_content_clipboard.py  test_diagnostics_api_extended.py  test_favorites.py  test_notifications.py  test_path_resolver.py  test_platform_clipboard.py  test_profile_api.py  test_read_states_api.py  test_report.py  test_report_api.py  test_search_api.py  test_search_migration.py  test_search_service_core.py  test_search_service_units.py  test_service_utils.py  test_settings.py  test_settings_api_extended.py  test_settings_store_extended.py  test_sync_api.py  test_sync_blog_integration.py  test_sync_service.py  test_sync_service_core.py  test_sync_service_extended.py  test_transcription_api.py  test_transcription_service.py  test_translation_api.py  test_translation_service.py  (+2 more)
data/: colors.ts
data/members/: hinatazaka.json  nogizaka.json  sakurazaka.json
docs/: DEVELOPMENT.md  ISSUES_REPORT.md  KNOWN_BUGS.md  ROADMAP.md
docs/plans/: 2025-01-12-bug-report-system-design.md  2025-01-14-logging-refactor-design.md  2025-01-14-tokenmanager-singleton-design.md  2026-01-11-advanced-frontend-testing.md  2026-01-11-frontend-testing.md  2026-01-13-anonymous-analytics-design.md  2026-01-13-favorites-design.md  2026-01-13-media-gallery-improvements-design.md  2026-01-14-blogs-feature.md  2026-01-14-multi-service-backend-impl.md  2026-01-14-multi-service-backend.md  2026-01-14-multi-service-ui.md  2026-01-14-ui-architecture-design.md  2026-01-16-member-favorites-design.md  2026-01-16-member-favorites-impl.md  2026-01-17-member-data-refactor-design.md  2026-01-17-per-service-state-files-design.md  2026-01-18-multi-service-auth-refresh-design.md  2026-01-18-multi-service-auth-refresh.md  2026-03-03-blog-search-plan.md  (+3 more)
frontend/: .eslintrc.cjs  .gitignore  index.html  member_penlight_color.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts  vitest.config.ts
scripts/: build_windows.bat  test_alignment.py  test_gemini_timestamps.py  verify_build.py
tests/: conftest.py  test_api_chat_features.py  test_api_content.py  test_api_diagnostics.py  test_api_favorites.py  test_api_profile.py  test_api_progress.py  test_api_settings.py  test_api_smoke.py  test_api_sync_endpoints.py  test_api_unread_counts.py  test_download_integration.py  test_keyring_resilience.py  test_multi_group.py  test_services_platform.py  test_startup.py
tooling/: build_windows.spec  bump_version.py
website/: .gitignore  astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
(+261 files in other folders)
