[project]
name = "hakodesk"
version = "0.1.0"
description = "HakoDesk GUI Application"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pyhako",
    "python-multipart",
    "aiofiles",
    "keyring",
    "tk>=0.1.0",
    "structlog>=25.5.0",
    "keyrings-alt>=5.0.2",
]

[tool.uv.sources]
pyhako = { path = "../PyHako", editable = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

# Development server configuration
# Run with: uv run uvicorn backend.main:app --port 8000 --reload --reload-exclude "output/*" --reload-exclude "auth_data/*"
