[project]
name = "sakadesk"
version = "0.2.3"
description = "SakaDesk GUI Application"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pysaka>=0.3.0",
    "python-multipart",
    "aiofiles",
    "keyring",
    "tk>=0.1.0",
    "structlog>=25.5.0",
    "keyrings-alt>=5.0.2",
    "plyer>=2.1.0",
    "pykakasi>=2.3.0",
    "jaconv>=0.5.0",
]

[tool.uv.sources]
pysaka = { path = "../pysaka", editable = true }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.14.0",
    "ruff>=0.14.13",
    "pre-commit>=4.5.1",
]

[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests"]
asyncio_mode = "strict"

[tool.coverage.run]
source = ["backend"]
omit = ["backend/__pycache__/*", "tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
explicit_package_bases = true
disable_error_code = ["import-untyped"]
exclude = [
    "tests/",
    ".venv/",
]

[[tool.mypy.overrides]]
module = "backend.*"
disallow_untyped_defs = false
check_untyped_defs = true

# Development server configuration
# Run with: uv run uvicorn backend.main:app --port 8000 --reload --reload-dir "../pysaka/src" --reload-exclude "output/*" --reload-exclude "auth_data/*"
